--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
 body {
+  padding: 0;
+  margin: 0;
   background: #ddd;
 }
 
@@ -6,6 +8,7 @@ body {
   margin: auto;
   width: 500px;
   height: 600px;
+  margin-top: 10px;
   position: relative;
   background: linear-gradient(
     to bottom,
@@ -16,6 +19,7 @@ body {
   );
   border: 10px solid black;
   overflow: hidden;
+  user-select: none;
 }
 
 #scene {
@@ -26,6 +30,7 @@ body {
   top: 0;
   perspective: 600px;
   perspective-origin: 50% 0%;
+  transform-style: preserve-3d;
 }
 
 #road {
@@ -52,6 +57,7 @@ body {
   background: url('runner.png') no-repeat;
   transform-origin: center center;
   animation: run 0.3s steps(4) infinite;
+  z-index: 10;
 }
 
 @keyframes run {
@@ -63,53 +69,23 @@ body {
   }
 }
 
-#cube-blueprint,
+#bomb-blueprint,
 #coin-blueprint {
   display: none;
 }
 
-.cube {
+.bomb {
   position: absolute;
   left: 50%;
   top: 0;
-  width: 40px;
-  height: 40px;
+  width: 36px;
+  height: 36px;
+  line-height: 36px;
   margin-left: -20px;
-  transform-style: preserve-3d;
-  transform: translateX(-50%) translateZ(20px);
-}
-
-.cube .face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #ff3366;
+  transform-origin: bottom center;
+  text-align: center;
+  background: #ef1a4f;
   border: 1px solid #930025;
-  box-sizing: border-box;
-}
-
-.cube .front {
-  transform: translateZ(15px);
-}
-.cube .back {
-  transform: rotateY(180deg) translateZ(15px);
-}
-
-.cube .right {
-  transform: rotateY(90deg) translateZ(15px);
-}
-.cube .left {
-  transform: rotateY(-90deg) translateZ(15px);
-}
-
-.cube .top {
-  transform: rotateX(90deg) translateZ(15px);
-}
-.cube .bottom {
-  transform: rotateX(-90deg) translateZ(15px);
 }
 
 .coin {
@@ -119,30 +95,14 @@ body {
   width: 26px;
   height: 26px;
   margin-left: -13px;
-  margin-top: -13px;
-  /* animation: spin 2s linear infinite; */
+  line-height: 26px;
+  text-align: center;
   transform-origin: center center;
-}
-
-.coin .face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   background: radial-gradient(circle at 30% 30%, gold 40%, goldenrod 100%);
-  border: 2px solid goldenrod;
+  border: 1px solid goldenrod;
   border-radius: 50%;
   box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 14px;
-  backface-visibility: hidden;
-}
-
-.coin .face.back {
-  transform: rotateY(180deg);
-  background: radial-gradient(circle at 30% 30%, goldenrod 40%, #c69800 100%);
-  border-color: rgb(165, 113, 0);
 }
 
 @keyframes spin {
