--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ body {
   left: 50%;
   bottom: 0;
   transform-origin: bottom center;
-  transform: rotateX(60deg); /* High angle for flat road */
+  transform: rotateX(60deg);
   background: url('asphalt.png') repeat-y;
   background-size: contain;
 }
@@ -55,7 +55,6 @@ body {
   margin-left: -92px;
   margin-top: -122px;
   background: url('runner.png') no-repeat;
-  transform-origin: center center;
   animation: run 0.3s steps(4) infinite;
   z-index: 10;
 }
@@ -81,11 +80,14 @@ body {
   width: 36px;
   height: 36px;
   line-height: 36px;
-  margin-left: -20px;
-  transform-origin: bottom center;
+  margin-left: -18px;
   text-align: center;
   background: #ef1a4f;
   border: 1px solid #930025;
+}
+
+.bomb::after {
+  content: '💣';
 }
 
 .coin {
@@ -97,7 +99,6 @@ body {
   margin-left: -13px;
   line-height: 26px;
   text-align: center;
-  transform-origin: center center;
   background: radial-gradient(circle at 30% 30%, gold 40%, goldenrod 100%);
   border: 1px solid goldenrod;
   border-radius: 50%;
@@ -105,11 +106,6 @@ body {
   font-size: 14px;
 }
 
-@keyframes spin {
-  from {
-    transform: rotateY(360deg);
-  }
-  to {
-    transform: rotateY(0deg);
-  }
+.coin::after {
+  content: '💰';
 }
