--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
   background: #ddd;
 }
 
-#game {
+.game {
   margin: auto;
   width: 500px;
   height: 600px;
@@ -20,6 +20,28 @@ body {
   border: 10px solid black;
   overflow: hidden;
   user-select: none;
+}
+
+.score,
+.level {
+  font-family: Orbitron, monospace;
+  position: absolute;
+  top: 10px;
+  font-size: 24px;
+}
+
+.level {
+  left: 20px;
+}
+
+.score {
+  right: 20px;
+  text-align: right;
+}
+
+#score,
+#level {
+  font-size: 36px;
 }
 
 #scene {
@@ -42,7 +64,7 @@ body {
   bottom: 0;
   transform-origin: bottom center;
   transform: rotateX(60deg);
-  background: url('asphalt.png') repeat-y;
+  background: url('road.png') repeat-y;
   background-size: contain;
 }
 
@@ -57,6 +79,20 @@ body {
   background: url('runner.png') no-repeat;
   animation: run 0.3s steps(4) infinite;
   z-index: 10;
+}
+
+#runner.dead {
+  animation: death 0.8s ease-out forwards;
+}
+
+@keyframes death {
+  0% {
+    filter: none;
+  }
+
+  100% {
+    filter: saturate(0) brightness(0.7);
+  }
 }
 
 @keyframes run {
